--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
 
         <svg class="home-img" width="300" height="300" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
             <defs>
-              <!-- Drop shadow filter -->
               <filter id="shadow" x="-50%" y="-50%" width="200%" height="200%">
                 <feDropShadow dx="5" dy="5" stdDeviation="5" flood-color="#00ABF0" />
               </filter>
           
-              <!-- Blob clipPath -->
               <clipPath id="blob_clip">
                 <path
                   d="M46,-70.7C60.4,-62.3,73.4,-50.9,76.4,-37C79.4,-23.2,72.4,-6.9,67.7,8.1C63.1,23.1,60.8,36.9,53.9,49.1C47,61.2,35.6,71.8,22.3,75.5C9,79.2,-6.2,76.1,-20.5,71.2C-34.8,66.4,-48.1,59.8,-60.6,50C-73,40.1,-84.6,27,-89.4,11.2C-94.2,-4.6,-92.3,-22.9,-83.9,-37C-75.4,-51.1,-60.4,-60.9,-45.4,-68.9C-30.3,-77,-15.1,-83.3,0.3,-83.8C15.8,-84.3,31.6,-79,46,-70.7Z"
@@ -52,9 +50,8 @@
               </clipPath>
             </defs>
           
-            <!-- Image with blob clipPath -->
             <image
-              href="your-image.jpg"
+              href="self_img.png"
               width="300"
               height="300"
               clip-path="url(#blob_clip)"
