--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           
             <image
               href="self_img.png"
-              width="300"
-              height="300"
+              width="100"
+              height= auto
               clip-path="url(#blob_clip)"
               preserveAspectRatio="xMidYMid slice"
               filter="url(#shadow)"
