--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
             </defs>
           
             <image
-              href="self_img.png"
-              width="100"
-              height= auto
-              clip-path="url(#blob_clip)"
-              preserveAspectRatio="xMidYMid slice"
-              filter="url(#shadow)"
+                href="self_img.png"
+                width="100"
+                clip-path="url(#blob_clip)"
+                preserveAspectRatio="xMidYMin slice" <!-- Aligns image at the top -->
+                filter="url(#shadow)"
             />
         </svg>
           
