--- a/index.html
+++ b/index.html
@@ -50,13 +50,7 @@
               </clipPath>
             </defs>
           
-            <image
-                href="self_img.png"
-                width="100"
-                clip-path="url(#blob_clip)"
-                preserveAspectRatio="xMidYMin slice" <!-- Aligns image at the top -->
-                filter="url(#shadow)"
-            />
+            <image class="blob_img" x="50" y="60" href="self_img.png"/>
         </svg>
           
         <section class="home" id="home-section">
