--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 fill="#00ABF0" 
                 d="M46,-70.7C60.4,-62.3,73.4,-50.9,76.4,-37C79.4,-23.2,72.4,-6.9,67.7,8.1C63.1,23.1,60.8,36.9,53.9,49.1C47,61.2,35.6,71.8,22.3,75.5C9,79.2,-6.2,76.1,-20.5,71.2C-34.8,66.4,-48.1,59.8,-60.6,50C-73,40.1,-84.6,27,-89.4,11.2C-94.2,-4.6,-92.3,-22.9,-83.9,-37C-75.4,-51.1,-60.4,-60.9,-45.4,-68.9C-30.3,-77,-15.1,-83.3,0.3,-83.8C15.8,-84.3,31.6,-79,46,-70.7Z"
                 transform="translate(100 100)"
+                filter="url(#shadow)"
             />                   
         </svg>
           
